package uk.gov.justice.digital.hmpps.approvedpremisesapi.cas3.model

import java.util.UUID
data class Cas3PremisesCharacteristic(val id: UUID, val name: String, val description: String)
